--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your contract is next</title>
-  <meta name="og-image" content="/img/og.png">
+  <meta name="og:image" content="/img/og.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76A2YpOJ4XEY3eU+usA2fnF6rdkz5iUOdQ2z1HTH+8z3e1d6tSTFjcJfYd2a6sU" crossorigin="anonymous"></script>
 </head>     
