--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,6 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your contract is next</title>
   <meta property="og:image" content="/img/og.png">
+  <meta property="og:title" content="Your contract is next">
+  <meta property="og:description" content="A searchable list of federal contracts cut by DOGE">
+  <meta property="og:url" content="https://yourcontractisnext.com">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Your contract is next">
+  <meta property="og:locale" content="en_US">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Your contract is next">
+  <meta name="twitter:description" content="A searchable list of federal contracts cut by DOGE">
+  <meta name="twitter:image" content="/img/og.png">
+  <meta name="twitter:site" content="@yourcontractisnext">
+  <meta name="twitter:creator" content="@yourcontractisnext">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76A2YpOJ4XEY3eU+usA2fnF6rdkz5iUOdQ2z1HTH+8z3e1d6tSTFjcJfYd2a6sU" crossorigin="anonymous"></script>
 </head>     
